# hyades

./: .cassilda.json  .clang-format  .gitattributes  .gitignore  CMakeLists.txt  PRIVACY.md  README.md  TERMS.md  llms-full.txt  llms.txt  server.json
.github/: CROSS_PLATFORM_FIXES.md  PAGES_SETUP.md
.github/workflows/: README.md  build.yml  test.yml
cl_demos/: interactive_gol.hy  matrix_rain.hy  turing_completeness.cld
editor-configs/: helix-config.toml  helix-languages.toml  install.ps1  install.sh  nvim-cassilda.lua  render-docs.ps1  render-docs.sh
hyades-vscode-ext/: .vscodeignore  LICENSE  install-local.sh  language-configuration.json  package-lock.json  package.json  tsconfig.json
hyades-vscode-ext/src/: extension.ts  lsp-client.ts
hyades-vscode-ext/syntaxes/: cassilda.tmLanguage.json
include/: hyades.h
lsp-server/: IMPLEMENTATION_PLAN.md  MONACO_LSP_PLAN.md  README.md  cassilda-mode.el  npm  nvim-cassilda.lua  package-lock.json  package.json  test-emacs.sh  test-helix.sh  test-lsp.js  test-nvim.sh  test_wasm_perf.cjs  tsconfig.json
lsp-server/bundle/: hyades-compat.js  hyades-compat.wasm  server.js
lsp-server/src/: hyades-wasm.ts  server.ts
mcp-server/: README.md
mcp-server/wasm/: CMakeLists.txt  build.sh  mcp_bindings.c
mcp-server/worker/: package-lock.json  package.json  wrangler.toml
mcp-server/worker/src/: index.ts  tool-description.ts
readme-assets/: genimg.sh  gh-showcase.txt
src/: hyades_kernel.h  hyades_kernel_internal.h  hyades_kernel_types.h  test_lsp_parse.c
src/cassilda/: cassilda.c  cassilda.h  cassilda_main.c  label_library.c  label_library.h
src/compositor/: commands.c  compose.c  compositor.h  compositor_internal.h  hyphenate.c  linebreak.c  mapping.c  paragraph.c  segments.c  strbuf.c  textstyle.c  typography.c
src/diagnostics/: diagnostics.c  diagnostics.h
src/document/: calc.c  calc.h  delimiter_stack.c  delimiter_stack.h  doc_commands.c  doc_commands.h  document.h  document_parser.c  macro_expand.c  macro_expand.h  source_map.c  source_map.h  symbol_table.c  symbol_table.h  user_macro.h
src/hyades/: hyades_main.c
src/interop/: julia_bridge.c  julia_bridge.h
src/layout/: box.c  box_align.c  box_layout_helpers.c  box_layout_parser.c  box_layout_rules_parser.c  box_merge.c  layout.h  layout_internal.h  layout_new.c  layout_render.c  layout_types.h  rules.c  width_resolve.c
src/lexer/: lexer.c  lexer.h
src/lsp/: builtin_docs.h
src/macro/stdlib/: stdlib_lambdas.h  stdlib_macros.h
src/macro/system/: aligned_macro.c  aligned_macro.h  list_macro.c  list_macro.h  table_macro.c  table_macro.h
src/macro/user/: macro.c  macro.h
src/math/: ast.c  ast.h
src/math/parser/: parser.h  parser_constructs.c  parser_core.c  parser_delimiters.c  parser_entry.c  parser_grammar.c  parser_internal.h  parser_operators.c  parser_tokens.c
src/math/renderer/: math_accents.c  math_boxes.c  math_constructs.c  math_delimiters.c  math_internal.h  math_render.c  math_scripts.c  math_styles.c  math_symbols.c  render_opts.c  render_opts.h  symbols.c  symbols.h
src/mcp/: mcp_json.c  mcp_json.h  mcp_server.c  mcp_tool_description.h
src/parser/: parser_constructs.c  parser_delimiters.c  parser_grammar.c  parser_internal.h  parser_operators.c  parser_tokens.c
src/public_api/: hyades_api.c  hyades_api.h  hyades_parse_api.c  hyades_parse_api.h  hyades_public_api.c
src/render/: box_drawing.c  box_drawing.h  figlet.c  figlet.h
src/subnivean/: ast.c  ast.h  compiler.c  compiler.h  lexer.c  lexer.h  opcodes.c  opcodes.h  parser.c  parser.h  subnivean.h  token.h  vm.c  vm.h
src/subnivean/v2/: SUBNIVEAN.md  calc_ast.h  calc_compiler.c  calc_compiler.h  calc_parser.c  calc_parser.h  function.c  function.h  hashmap.c  hashmap.h  opcode.h  persistent_store.c  persistent_store.h  scope.c  scope.h  sn_assembler.c  sn_assembler.h  subnivean_api.c  subnivean_api.h  value.c  value.h  vm.c  vm.h
src/tools/: export_symbol_templates.c  gen_examples.c  gen_stdlib.c  gen_stdlib_lambdas.c
src/utils/: error.c  error.h  parse_options.h  parser_recovery.c  parser_recovery.h  strbuf.c  strbuf.h  terminal_input.c  terminal_input.h  terminal_input_win.c  utf8.c  utf8.h  util.h  warnings.c  warnings.h
stdlib/: stdlib.cld  stdlib_lambdas.cld
tests/: lsp_stress_test.sh  run_tests.sh  update_goldens.sh
tests/goldens/: 00010-quick-primer.cld  00105-math-reference.cld  00106-math-gallery.cld  00107-math-gallery-2.cld  00108-math-gallery-3.cld  00206-tables.cld  00207-lists.cld  00209-layout.cld  00210-macros.cld  00312-cl.cld  00322-subnivean.cld
tools/: vsenv.cmd
tree-sitter-cassilda/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-cassilda/bindings/c/: tree-sitter-cassilda.pc.in
tree-sitter-cassilda/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-cassilda/bindings/node/: binding.cc
tree-sitter-cassilda/bindings/python/tree_sitter_cassilda/: __init__.py  binding.c
tree-sitter-cassilda/bindings/rust/: build.rs  lib.rs
tree-sitter-cassilda/bindings/swift/TreeSitterCassilda/: cassilda.h
tree-sitter-cassilda/queries/: highlights.scm
tree-sitter-cassilda/src/: scanner.c
wasm/: CMakeLists.txt  build-wasm.sh  cassilda-app.css  cassilda-app.js  examples-library.js  hyades-api.js  hyades-worker.js  hyades.js  hyades.wasm  hyades_lsp.c  index.html  julia_bridge_wasm.c  terminal_input_wasm.c  wasm_bindings.c
wasm/.well-known/: mcp.json
wasm/examples/: 00010-quick-primer.cld  00105-math-reference.cld  00106-math-gallery.cld  00107-math-gallery-2.cld  00108-math-gallery-3.cld  00206-tables.cld  00207-lists.cld  00209-layout.cld  00210-macros.cld  00312-cl.cld  00322-subnivean.cld
